--- a/index.Rmd
+++ b/index.Rmd
@@ -72,10 +72,16 @@ opts_knit$set(width=75)
   * [Path length of all trials](#anchor28)
   * [Latency to goal of all trials](#anchor29)
 * [Logistic regression](#anchor30)
-  * [Age group 17-25 Strain](#anchor31)
-  * [Age group 13-14 Strain*Housing](#anchor32)
-  * [Age group 3 Strain*Housing](#anchor33)
-
+  * [17-25 Strain](#anchor31)
+  * [13-14 Strain*Housing](#anchor32)
+  * [3 Strain*Housing](#anchor33)
+  * [17-25 acquisition Strain](#anchor34)
+  * [17-25 reversal Strain*Housing](#anchor35)
+  * [13-14 acquisition Strain*Housing](#anchor36)
+  * [13-14 reversal Strain*Housing](#anchor37)
+  * [3 acquisition Strain*Housing](#anchor38)
+  * [3 reversal Strain*Housing](#anchor39)
+ 
 
 *** 
 
@@ -953,7 +959,7 @@ setwd("C:/Google/Uni/Bachelorarbeit/R/Analysis")
 logistic.data=read_excel("logistic.reg.xlsx")
 ```
 
-## Age Group 17-25 Housing  {#anchor31 }
+## Age group 17-25 Housing  {#anchor31 }
 
 ***  
 
@@ -1126,3 +1132,318 @@ pred.data3x
 ```
 
 The full overview of the [logistic regression results table](https://docs.google.com/spreadsheets/d/1l4cZd7b-e-g4R9bCtmnzOb2TT8EPAE8E/edit#gid=952962709) is here.
+
+## Age group 17-25 acquisition Strain  {#anchor34 }
+
+***  
+
+```{r}
+logistic.data.1725.acq=filter(logistic.data.1725, `_Day`=='1'|`_Day`=='2'|`_Day`=='3'|`_Day`=='4'|`_Day`=='5'|`_Day`=='6')
+```
+fitting different logistic regression models with increasing complexity  
+simple model including housing only
+```{r}
+logreg.1725.acq.add.1a <- glm(strategy.class ~ Housing, family = binomial, data = logistic.data.1725.acq)
+```  
+simple model including Strain only
+```{r}
+logreg.1725.acq.add.1b <- glm(strategy.class ~ Strain, family = binomial, data = logistic.data.1725.acq)
+```  
+additive model including all factors
+```{r}
+logreg.1725.acq.add.2 <- glm(strategy.class ~ Housing + Strain, family = binomial, data = logistic.data.1725.acq)
+```  
+interaction model including all factors
+```{r}
+logreg.1725.acq.int <- glm(strategy.class ~ Housing * Strain, family = binomial, data = logistic.data.1725.acq)
+```
+Model comparisons using the anova function
+```{r}
+anova(logreg.1725.acq.add.1b, logreg.1725.acq.add.1a, test="Chisq")
+```  
+model including Strain better than model including housing
+```{r}
+anova(logreg.1725.acq.add.2, logreg.1725.acq.add.1b, test="Chisq")
+```
+adding factor housing does not improve the model
+```{r}
+anova(logreg.1725.acq.int, logreg.1725.acq.add.1b, test="Chisq")
+```
+
+```{r}
+summary(logreg.1725.acq.int)
+exp(coef(logreg.1725.acq.int))
+```
+
+impact of predictor "Strain"
+```{r}
+pred.data.17.acq <- data.frame(Strain=c("WT", "dTg", "PS1dE9", "APPswe"))
+pred.data.17.acq$prob <- predict(logreg.1725.acq.add.1b, newdata = pred.data.17.acq, type = "response")
+pred.data.17.acq
+```
+
+## Age group 17-25 reversal Strain  {#anchor35 }
+
+***  
+
+```{r}
+logistic.data.1725.rev=filter(logistic.data.1725, `_Day`=='7'|`_Day`=='8'|`_Day`=='9'|`_Day`=='10')
+```
+fitting different logistic regression models with increasing complexity  
+simple model including housing only
+```{r}
+logreg.1725.rev.add.1a <- glm(strategy.class ~ Housing, family = binomial, data = logistic.data.1725.rev)
+```  
+simple model including Strain only
+```{r}
+logreg.1725.rev.add.1b <- glm(strategy.class ~ Strain, family = binomial, data = logistic.data.1725.rev)
+```  
+additive model including all factors
+```{r}
+logreg.1725.rev.add.2 <- glm(strategy.class ~ Housing + Strain, family = binomial, data = logistic.data.1725.rev)
+```  
+interaction model including all factors
+```{r}
+logreg.1725.rev.int <- glm(strategy.class ~ Housing * Strain, family = binomial, data = logistic.data.1725.rev)
+```
+Model comparisons using the anova function
+```{r}
+anova(logreg.1725.rev.add.1b, logreg.1725.rev.add.1a, test="Chisq")
+```  
+model including Strain better than model including housing
+```{r}
+anova(logreg.1725.rev.add.2, logreg.1725.rev.add.1b, test="Chisq")
+```
+adding factor housing does not improve the model
+```{r}
+anova(logreg.1725.rev.int, logreg.1725.rev.add.1b, test="Chisq")
+```
+interaction model better than additive model
+
+summary of minimal adequate model
+```{r}
+summary(logreg.1725.rev.int)
+exp(coef(logreg.1725.rev.int))
+```
+impact of predictor "Strain"
+```{r}
+pred.data.17.revs <- data.frame(Strain=c("WT","WT", "dTg","dTg", "PS1dE9","PS1dE9", "APPswe","APPswe"),Housing=c("STD","ENR","STD","ENR","STD","ENR","STD","ENR"))
+pred.data.17.revs$prob <- predict(logreg.1725.rev.int, newdata = pred.data.17.revs, type = "response")
+pred.data.17.revs
+```
+
+## Age group 13-14 acquisition Strain x Housing {#anchor36}
+  
+***  
+
+
+```{r}
+logistic.data.acq.1314=filter(logistic.data.1314,  `_Day`=='1'|`_Day`=='2'|`_Day`=='3'|`_Day`=='4'|`_Day`=='5'|`_Day`=='6')
+```
+fitting different logistic regression models with increasing complexity
+simple model including housing only
+```{r}
+logreg.1314.acq.add.1a <- glm(strategy.class ~ Housing, family = binomial, data = logistic.data.acq.1314)
+```
+simple model including Strain only
+```{r}
+logreg.1314.acq.add.1b <- glm(strategy.class ~ Strain, family = binomial, data = logistic.data.acq.1314)
+```
+additive model including all factors
+```{r}
+logreg.1314.acq.add.2 <- glm(strategy.class ~ Housing + Strain, family = binomial, data = logistic.data.acq.1314)
+```
+interaction model including all factors
+```{r}
+logreg.1314.acq.int <- glm(strategy.class ~ Housing * Strain, family = binomial, data = logistic.data.acq.1314)
+```
+comparisons between model using the anova function
+```{r}
+anova(logreg.1314.acq.add.1b, logreg.1314.acq.add.1a, test="Chisq")
+```
+model with Strain only is really good (Pr=3.245e-13)
+```{r}
+anova(logreg.1314.acq.add.2, logreg.1314.acq.add.1b, test="Chisq")
+```
+adding factor housing also has good fit 
+```{r}
+anova(logreg.1314.acq.int, logreg.1314.acq.add.1b, test="Chisq")
+```
+additive model better than interaction model
+additive model is the best
+
+summary of interactive model
+```{r}
+summary(logreg.1314.acq.int)
+exp(coef(logreg.1314.acq.int))
+```
+
+impact of predictors "Strain x Housing"
+```{r}
+pred.data1314.acq <- data.frame(Strain=c("WT","WT", "dTg","dTg"),Housing=c("STD","ENR","STD","ENR"))
+pred.data1314.acq$prob <- predict(logreg.1314.acq.int, newdata = pred.data1314.acq, type = "response")
+pred.data1314.acq
+```  
+
+## Age group 13-14 reversal Strain x Housing {#anchor37}
+  
+***  
+
+
+```{r}
+logistic.data.rev.1314=filter(logistic.data.1314,  `_Day`=='7'|`_Day`=='8'|`_Day`=='9'|`_Day`=='10')
+```
+fitting different logistic regression models with increasing complexity
+simple model including housing only
+```{r}
+logreg.1314.rev.add.1a <- glm(strategy.class ~ Housing, family = binomial, data = logistic.data.rev.1314)
+```
+simple model including Strain only
+```{r}
+logreg.1314.rev.add.1b <- glm(strategy.class ~ Strain, family = binomial, data = logistic.data.rev.1314)
+```
+additive model including all factors
+```{r}
+logreg.1314.rev.add.2 <- glm(strategy.class ~ Housing + Strain, family = binomial, data = logistic.data.rev.1314)
+```
+interaction model including all factors
+```{r}
+logreg.1314.rev.int <- glm(strategy.class ~ Housing * Strain, family = binomial, data = logistic.data.rev.1314)
+```
+comparisons between model using the anova function
+```{r}
+anova(logreg.1314.rev.add.1b, logreg.1314.rev.add.1a, test="Chisq")
+```
+model with Strain only is really good (Pr=3.245e-13)
+```{r}
+anova(logreg.1314.rev.add.2, logreg.1314.rev.add.1b, test="Chisq")
+```
+adding factor housing also has good fit  (Pr=1.945e-5)
+```{r}
+anova(logreg.1314.rev.int, logreg.1314.rev.add.1b, test="Chisq")
+```
+interaction model better than additive model (Pr=5.648e-6)
+interaction model is the best
+
+summary of interaction model
+```{r}
+summary(logreg.1314.rev.int)
+exp(coef(logreg.1314.rev.int))
+```
+
+impact of predictors "Strain x Housing"
+```{r}
+pred.data1314.rev <- data.frame(Strain=c("WT","WT", "dTg","dTg"),Housing=c("STD","ENR","STD","ENR"))
+pred.data1314.rev$prob <- predict(logreg.1314.rev.int, newdata = pred.data1314.rev, type = "response")
+pred.data1314.rev
+```
+
+## Age group 3 acquisition Strain x Housing {#anchor38}
+  
+***  
+
+
+```{r}
+logistic.data.acq.3=filter(logistic.data.3,  `_Day`=='1'|`_Day`=='2'|`_Day`=='3'|`_Day`=='4'|`_Day`=='5'|`_Day`=='6')
+```
+fitting different logistic regression models with increasing complexity
+simple model including housing only
+```{r}
+logreg.3.acq.add.1a <- glm(strategy.class ~ Housing, family = binomial, data = logistic.data.acq.3)
+```
+simple model including Strain only
+```{r}
+logreg.3.acq.add.1b <- glm(strategy.class ~ Strain, family = binomial, data = logistic.data.acq.3)
+```
+additive model including all factors
+```{r}
+logreg.3.acq.add.2 <- glm(strategy.class ~ Housing + Strain, family = binomial, data = logistic.data.acq.3)
+```
+interaction model including all factors
+```{r}
+logreg.3.acq.int <- glm(strategy.class ~ Housing * Strain, family = binomial, data = logistic.data.acq.3)
+```
+comparisons between model using the anova function
+```{r}
+anova(logreg.3.acq.add.1b, logreg.3.acq.add.1a, test="Chisq")
+```
+model with Strain only is really good (Pr=3.245e-13)
+```{r}
+anova(logreg.3.acq.add.2, logreg.3.acq.add.1b, test="Chisq")
+```
+adding factor housing also has good fit  (Pr=1.945e-5)
+```{r}
+anova(logreg.3.acq.int, logreg.3.acq.add.1b, test="Chisq")
+```
+interaction model better than additive model (Pr=5.648e-6)
+interaction model is the best
+
+summary of interaction model
+```{r}
+summary(logreg.3.acq.int)
+exp(coef(logreg.3.acq.int))
+```
+
+impact of predictors "Strain x Housing"
+```{r}
+pred.data3.acq <- data.frame(Strain=c("WT","WT", "dTg","dTg", "PS1dE9","PS1dE9", "APPswe","APPswe"),Housing=c("STD","ENR","STD","ENR","STD","ENR","STD","ENR"))
+pred.data3.acq$prob <- predict(logreg.3.acq.int, newdata = pred.data3.acq, type = "response")
+pred.data3.acq
+```  
+
+## Age group 3 reversal Strain x Housing {#anchor39}
+  
+***  
+
+
+```{r}
+logistic.data.rev.3=filter(logistic.data.3,  `_Day`=='7'|`_Day`=='8'|`_Day`=='9'|`_Day`=='10')
+```
+fitting different logistic regression models with increasing complexity
+simple model including housing only
+```{r}
+logreg.3.rev.add.1a <- glm(strategy.class ~ Housing, family = binomial, data = logistic.data.rev.3)
+```
+simple model including Strain only
+```{r}
+logreg.3.rev.add.1b <- glm(strategy.class ~ Strain, family = binomial, data = logistic.data.rev.3)
+```
+additive model including all factors
+```{r}
+logreg.3.rev.add.2 <- glm(strategy.class ~ Housing + Strain, family = binomial, data = logistic.data.rev.3)
+```
+interaction model including all factors
+```{r}
+logreg.3.rev.int <- glm(strategy.class ~ Housing * Strain, family = binomial, data = logistic.data.rev.3)
+```
+comparisons between model using the anova function
+```{r}
+anova(logreg.3.rev.add.1b, logreg.3.rev.add.1a, test="Chisq")
+```
+model with Strain only is really good (Pr=3.245e-13)
+```{r}
+anova(logreg.3.rev.add.2, logreg.3.rev.add.1b, test="Chisq")
+```
+adding factor housing also has good fit  (Pr=1.945e-5)
+```{r}
+anova(logreg.3.rev.int, logreg.3.rev.add.1b, test="Chisq")
+```
+interaction model better than additive model (Pr=5.648e-6)
+interaction model is the best
+
+summary of interaction model
+```{r}
+summary(logreg.3.rev.int)
+exp(coef(logreg.3.rev.int))
+```
+
+impact of predictors "Strain x Housing"
+```{r}
+pred.data3.rev <- data.frame(Strain=c("WT","WT", "dTg","dTg", "PS1dE9","PS1dE9", "APPswe","APPswe"),Housing=c("STD","ENR","STD","ENR","STD","ENR","STD","ENR"))
+pred.data3.rev$prob <- predict(logreg.3.rev.int, newdata = pred.data3.rev, type = "response")
+pred.data3.rev
+```  
+
+## Results 
+
+Results table can be seen [here](https://docs.google.com/spreadsheets/d/1l4cZd7b-e-g4R9bCtmnzOb2TT8EPAE8E/edit#gid=952962709)
