--- a/index.Rmd
+++ b/index.Rmd
@@ -81,6 +81,8 @@ opts_knit$set(width=75)
   * [13-14 reversal Strain*Housing](#anchor37)
   * [3 acquisition Strain*Housing](#anchor38)
   * [3 reversal Strain*Housing](#anchor39)
+* [Strategy overview plot](#anchor40)
+* [visualization results log.reg](#anchor41)
  
 
 *** 
@@ -1447,3 +1449,41 @@ pred.data3.rev
 ## Results 
 
 Results table can be seen [here](https://docs.google.com/spreadsheets/d/1l4cZd7b-e-g4R9bCtmnzOb2TT8EPAE8E/edit#gid=952962709)
+
+# Strategy Overview plot {#anchor40} 
+
+```{r}
+knitr::include_graphics("strategy.png")
+```  
+  
+# Visualization results log. reg {#anchor40} 
+```{r}
+library(plotly)
+setwd("C:/Google/Uni/Bachelorarbeit/R/Analysis")
+gg = ggplot(pred.data3x, aes(x=Strain, y=prob, color=Housing)) + 
+  geom_jitter() + 
+  labs(x="Strain", y="P(strategy.class 1)", title="Probability of class 1") 
+ggplotly(gg)
+probs=read_excel("results_logistic.xlsx")
+```
+```{r}
+x=c("WT","dTg","PS1dE9","APPswe")
+y=c("STD","ENR","ACQ STD","ACQ ENR", "REV STD", "REV ENR")
+z=rbind(
+  c(0.1061947,-0.05573,0.0375,-0.1498423),
+  c(-0.1507937,0.0186289,0.1675978,-0.1517572),
+  c(0.1498674,0.1509217,0.0564133,0.1590389),
+  c(-0.0239207,0.0772358,0.1177536,0.137224),
+  c(-0.0544041,0.0931034,0.0140845,-0.0099778),
+  c(0.0010616,0.2090069,0.1390805,-0.2368421)
+)
+z2=rbind(
+  c(0,0,0,0),c(0,0,0,0),c(0,0,0,0),c(0,0,0,0),c(0,0,0,0),c(0,0,0,0))
+  
+ebene= plot_ly(type="surface", x=~x, y=~y, z=~z)
+ebene= ebene %>% add_surface(z=~z2)
+ebene= ebene %>% layout( title='Probability of Strategy class 1 in 3 months old mice')
+ebene
+```
+Interactive plot created with `plotly` library. 
+
