--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,8 @@ date: "`r Sys.Date()`"
 output:
   rmdformats::downcute:
     self_contained: true
+    includes: 
+     before_body: header.html
 bibliography: Bachelor Thesis.bib
 csl: elsevier-harvard.csl
 ---
@@ -86,7 +88,12 @@ write_bib(file = "r-packages.bib")
   * [3 acquisition Strain*Housing](#anchor38)
   * [3 reversal Strain*Housing](#anchor39)
 * [Strategy overview plot](#anchor40)
-* [visualization results log.reg](#anchor41)
+* [Visualization results log.reg](#anchor41)
+  * [2D - Age group 3 months](#anchor41.1)
+  * [2D - Age group 13-14 months](#anchor41.2)
+  * [2D - Age group 17-25 months](#anchor41.3)
+  * [3D - Surface Plot 3 months](#anchor41.4)
+* [References](#ref)
  
 
 *** 
@@ -1267,7 +1274,7 @@ comparisons between model using the anova function
 ```{r}
 anova(logreg.1314.acq.add.1b, logreg.1314.acq.add.1a, test="Chisq")
 ```
-model with Strain only is really good (Pr=3.245e-13)
+model with Strain only is good
 ```{r}
 anova(logreg.1314.acq.add.2, logreg.1314.acq.add.1b, test="Chisq")
 ```
@@ -1320,15 +1327,14 @@ comparisons between model using the anova function
 ```{r}
 anova(logreg.1314.rev.add.1b, logreg.1314.rev.add.1a, test="Chisq")
 ```
-model with Strain only is really good (Pr=3.245e-13)
 ```{r}
 anova(logreg.1314.rev.add.2, logreg.1314.rev.add.1b, test="Chisq")
 ```
-adding factor housing also has good fit  (Pr=1.945e-5)
+adding factor does not improve model
 ```{r}
 anova(logreg.1314.rev.int, logreg.1314.rev.add.1b, test="Chisq")
 ```
-interaction model better than additive model (Pr=5.648e-6)
+interaction model better than additive model
 interaction model is the best
 
 summary of interaction model
@@ -1373,15 +1379,15 @@ comparisons between model using the anova function
 ```{r}
 anova(logreg.3.acq.add.1b, logreg.3.acq.add.1a, test="Chisq")
 ```
-model with Strain only is really good (Pr=3.245e-13)
+model with Strain only is really good
 ```{r}
 anova(logreg.3.acq.add.2, logreg.3.acq.add.1b, test="Chisq")
 ```
-adding factor housing also has good fit  (Pr=1.945e-5)
+adding factor housing also has good fit  
 ```{r}
 anova(logreg.3.acq.int, logreg.3.acq.add.1b, test="Chisq")
 ```
-interaction model better than additive model (Pr=5.648e-6)
+interaction model better than additive model
 interaction model is the best
 
 summary of interaction model
@@ -1460,15 +1466,41 @@ Results table can be seen [here](https://docs.google.com/spreadsheets/d/1l4cZd7b
 knitr::include_graphics("strategy.png")
 ```  
   
-# Visualization results log. reg {#anchor41} 
+# Visualization results log. reg {#anchor41}   
+
+## 2D - Age group 3 {#anchor41.1}
 ```{r}
 setwd("C:/Google/Uni/Bachelorarbeit/R/Analysis")
-gg = ggplot(pred.data3x, aes(x=Strain, y=prob, color=Housing)) + 
-  geom_jitter() + 
-  labs(x="Strain", y="P(strategy.class 1)", title="Probability of class 1") 
-ggplotly(gg)
 probs=read_excel("results_logistic.xlsx")
+probs$`Experiment_Phase`=as.factor(probs$`Experiment_Phase`)
+probs3=filter(probs, Age_group=='3' & Model=='STRAIN*HOUSING')
+
+gg = ggplot(probs3, mapping=aes(x=Strain, y=Probability, color=Housing)) + geom_jitter() + facet_grid(~Experiment_Phase) + labs(x="Strain", y="P(strategy.class 1)", title="Probability of 3 months old mice using Strategy class 1")
+
+ggplotly(p=gg, height=400, width=800)
+```  
+Strain*Housing interaction model used for predictions.  
+
+## 2D - Age group 13-14 {#anchor41.2}
+```{r}
+probs13=filter(probs, Age_group=='13-14' & Model=='STRAIN*HOUSING')
+
+gg = ggplot(probs13, mapping=aes(x=Strain, y=Probability, color=Housing)) + geom_jitter() + facet_grid(~Experiment_Phase) + labs(x="Strain", y="P(strategy.class 1)", title="Probability of 13-14 months old mice using Strategy class 1")
+ggplotly(gg, height=400, width=800)
+```  
+For Aquisition phase additive model is the best. Should it be used?
+Strain*Housing interaction model used for predictions.  
+
+## 2D - Age group 17-25 {#anchor41.3}
+```{r}
+probs17=filter(probs, Age_group=='17-25')
+
+gg = ggplot(probs17, mapping=aes(x=Strain, y=Probability, color=Housing)) + geom_jitter() + facet_grid(~Experiment_Phase) + labs(x="Strain", y="P(strategy.class 1)", title="Probability of 17-25 months old mice using Strategy class 1", caption="test")
+ggplotly(gg, height=400, width=800)
 ```
+Strategy.class ~ Strain and Strategy.class ~ Housing models were used separately for ACQ and Both experiment phases. REV phase has best model fit with interaction model.  
+
+## 3D Surface Plot {#anchor41.4}
 ```{r}
 x=c("WT","dTg","PS1dE9","APPswe")
 y=c("STD","ENR","ACQ STD","ACQ ENR", "REV STD", "REV ENR")
@@ -1495,4 +1527,4 @@ testing citations[@garthe_mice_2016]
 
 RTrack package used[@overall_rtrack_2020]
 
-# References
+# References {#ref}
